[dyad] PWA-ondersteuning toegevoegd met manifest, service worker en registratie zodat de site als app installeerbaar is. - wrote 4 file(s)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sentinel RMM</title>
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#37323E" />
   </head>
 
   <body>
